[package]
name = "orgcom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = { version = "18.0.0", features = ["futures", "futures-executor", "arbitrary_precision"] }
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "tls", "ipc"] }
jsonrpc-derive = "18.0.0"
jsonrpc-ws-server = "18.0.0"
