[package]
name = "orgrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive", "color", "env"] }
jsonrpc = "0.14.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "tls", "ipc"] }
jsonrpc-derive = "18.0.0"
jsonrpc-ws-client = "11.0.0"
map = "0.0.0"
serde = { version = "1.0.149", features = ["derive", "rc", "serde_derive"] }
serde_json = "1.0.89"
tokio = "1.23.0"
url = "2.3.1"
ws = "0.9.2"
