[package]
name = "orgrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive", "color", "env"] }
jsonrpc-core = { version = "18.0.0", features = ["futures", "futures-executor", "arbitrary_precision"] }
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "tls", "ipc"] }
jsonrpc-derive = "18.0.0"
jsonrpc-ws-server = "18.0.0"
tokio = "1.23.0"
ws = "0.9.2"
orgcom = { path = "../orgcom"}
clap_conf = "0.2.0"
orgize = { version = "0.9.0", features = ["chrono", "indexmap"] }
glob = "0.3.0"
