[package]
name = "orgrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive", "color", "env"] }
jsonrpc-core = { version = "18.0.0", features = ["futures", "futures-executor", "arbitrary_precision"] }
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "tls", "ipc"] }
jsonrpc-derive = "18.0.0"
jsonrpc-ws-server = "18.0.0"
tokio = "1.23.0"
ws = "0.9.2"
orgcom = { path = "../orgcom"}
clap_conf = "0.2.0"
glob = "0.3.0"
notify = {version="5.0.0", default-features = false, feature=["macos_kqueue"] }
# I probably do not want chrono and indexmap, but I have them working for now.
orgize = { version = "0.9.0", features = ["chrono", "indexmap"] }
once_cell = "1.16.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
fasteval = "0.2.4"
colored = "2.0.0"
indextree = "4.5.0"
